# RayTracingNextWeek

./: .gitignore  Cargo.toml  README.md  main.ppm
ray-tracing/: Cargo.toml
ray-tracing/src/: .camera.rs.rustfmt  aabb.rs  bvh.rs  camera.rs  cvec.rs  hittable.rs  lib.rs  material.rs  medium.rs  objects.rs  perlin.rs  ray.rs  rtweekend.rs  run.rs  sphere.rs  texture.rs
ray-tracing/src/helpers/: cvec.rs  loader.rs  mod.rs
ray-tracing/src/render/: mod.rs  png.rs  ppm.rs
scenes/: Cargo.toml
scenes/src/: lib.rs  scenes.rs  setup.rs
src/: main.rs  scenes.rs  setup.rs
