[package]
name = "ray-tracing-weekend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["ray-tracing"]

[dependencies]
console = "0.14"
indicatif = {version = "0.16" }
ray-tracing = { path = "ray-tracing", features = ["progressbar"] }
anyhow = "1.0"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
