[package]
edition = "2018"
name = "ray-tracing-weekend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["ray-tracing", "scenes"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.6", features = [ "derive" ] }
console = "0.15"
indicatif = { version = "0.16" }
ray-tracing = { path = "ray-tracing", features = ["progressbar"] }
scenes = { path = "scenes" }

[profile.release]
debug = true
