[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
progressbar = ["indicatif"] 

[dependencies]
rayon = "1.5"
image = "0.23"
num-traits = "0.2"
rand = "0.8"
anyhow = "1.0"
itertools = "0.10"
cfg-if = "1.0"
indicatif = { version = "0.16", optional = true, features = ["rayon"] }

[dev-dependencies]
tempfile = "3.2"
